added update profile for citizen
